--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   metal-api:
-    image: maas-service_maas-api
+    image: maas-service_metal-api
     container_name: metal-api
     tty: true
     ports:
@@ -11,7 +11,7 @@ services:
     environment:
       METAL_API_WITH_MOCK_DATA: "true"
       METAL_API_BIND_ADDR: localhost
-    command: /maas-api
+    command: /metal-api
 
   pixiecore:
     image: danderson/pixiecore
