--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,30 @@
 version: "2"
 
 services:
+  pixiecore:
+    image: danderson/pixiecore
+    container_name: pixiecore
+    command: ["api", "http://localhost:4242", "--dhcp-no-bind"]
+    network_mode: host
+
+  metalcore:
+    build:
+      context: .
+    image: registry.fi-ts.io/metal/metalcore
+    container_name: metalcore
+    ports:
+      - "4242:4242"
+    network_mode: host
+    environment:
+      METALCORE_LOG_LEVEL: DEBUG
+      METALCORE_SERVER_ADDRESS: localhost
+      METALCORE_SERVER_PORT: 4242
+      METALCORE_METAL_API_PROTOCOL: http
+      METALCORE_METAL_API_ADDRESS: localhost
+      METALCORE_METAL_API_PORT: 8080
+
   metal-api:
-    image: maas-service_metal-api
+    image: registry.fi-ts.io/metal/metal-api
     container_name: metal-api
     tty: true
     ports:
@@ -11,28 +33,3 @@ services:
     environment:
       METAL_API_WITH_MOCK_DATA: "true"
       METAL_API_BIND_ADDR: localhost
-    command: /metal-api
-
-  pixiecore:
-    image: danderson/pixiecore
-    container_name: pixiecore
-    command: ["api", "http://localhost:4242", "--dhcp-no-bind"]
-    volumes:
-      - ./images:/images
-    network_mode: host
-
-  metalcore:
-    build: .
-    image: metalcore
-    container_name: metalcore
-    ports:
-      - "4242:4242"
-    network_mode: host
-    environment:
-      METALCORE_LOG_LEVEL: DEBUG
-      METALCORE_SERVER_PROTOCOL: http
-      METALCORE_SERVER_ADDRESS: localhost
-      METALCORE_SERVER_PORT: 4242
-      METALCORE_METAL_API_PROTOCOL: http
-      METALCORE_METAL_API_ADDRESS: localhost
-      METALCORE_METAL_API_PORT: 8080
