--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,6 @@ services:
       context: .
     image: registry.fi-ts.io/metal/metalcore
     container_name: metalcore
-    ports:
-      - "4242:4242"
     network_mode: host
     environment:
       METALCORE_LOG_LEVEL: DEBUG
@@ -23,12 +21,18 @@ services:
       METALCORE_METAL_API_ADDRESS: localhost
       METALCORE_METAL_API_PORT: 8080
 
+  swagger:
+    image: swaggerapi/swagger-ui
+    container_name: swagger-ui
+    network_mode: host
+    environment:
+      PORT: 9090
+      API_URL: http://localhost:8080/apidocs.json
+
   metal-api:
     image: registry.fi-ts.io/metal/metal-api
     container_name: metal-api
     tty: true
-    ports:
-      - "8080:8080"
     network_mode: host
     environment:
       METAL_API_WITH_MOCK_DATA: "true"
