--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,3 +37,15 @@ services:
     environment:
       METAL_API_WITH_MOCK_DATA: "true"
       METAL_API_BIND_ADDR: localhost
+
+  discover:
+    image: registry.fi-ts.io/metal/discover
+    container_name: discover
+    network_mode: host
+    depends_on:
+      - pixiecore
+      - metalcore
+      - swagger
+      - metal-api
+    environment:
+      DISCOVER_REPORTURL: http://localhost:4242/device/register/device-uuid
