--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
       METALCORE_SERVER_PORT: 4242
       METALCORE_METAL_API_PROTOCOL: http
       METALCORE_METAL_API_ADDRESS: localhost
-      METALCORE_METAL_API_PORT: 8080
+      METALCORE_METAL_API_PORT: 8090
 
   swagger:
     image: swaggerapi/swagger-ui
@@ -27,7 +27,7 @@ services:
     network_mode: host
     environment:
       PORT: 9090
-      API_URL: http://localhost:8080/apidocs.json
+      API_URL: http://localhost:8090/apidocs.json
 
   metal-api:
     image: registry.fi-ts.io/metal/metal-api
@@ -37,6 +37,7 @@ services:
     environment:
       METAL_API_WITH_MOCK_DATA: "true"
       METAL_API_BIND_ADDR: localhost
+    command: ["/metal-api", "--port", "8090"]
 
   discover:
     image: registry.fi-ts.io/metal/discover
