--- a/docker-make.yaml
+++ b/docker-make.yaml
@@ -1,6 +1,6 @@
 ---
 version: '1'
-name: metalcore
+name: metal-core
 username: metal
 registry-host: registry.fi-ts.io
 default-build-args:
@@ -12,6 +12,6 @@ default-build-args:
   - no_proxy=${NO_PROXY}
 builds:
   -
-    name: "metalcore"
+    name: "metal-core"
     tags:
       - latest
