--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,11 +15,6 @@ services:
     network_mode: host
     environment:
       METAL_CORE_LOG_LEVEL: DEBUG
-      METAL_CORE_CONTROL_PLANE_IP: localhost
-      METAL_CORE_ADDRESS: localhost
-      METAL_CORE_PORT: 4242
-      METAL_CORE_METAL_API_PROTOCOL: http
-      METAL_CORE_METAL_API_ADDRESS: localhost
       METAL_CORE_METAL_API_PORT: 8090
 
   swagger:
@@ -40,15 +35,12 @@ services:
       METAL_API_BIND_ADDR: localhost
     command: ["/metal-api", "--port", "8090"]
 
-  discover:
-    image: registry.fi-ts.io/metal/discover
-    container_name: discover
+  metal-hammer:
+    image: registry.fi-ts.io/metal/metal-hammer
+    container_name: metal-hammer
     network_mode: host
     depends_on:
       - pixiecore
       - metal-core
       - swagger
       - metal-api
-    environment:
-      DISCOVER_REPORTURL: http://localhost:4242/device/register
-      DISCOVER_INSTALLURL: http://localhost:4242/device/install
