--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       METAL_CORE_FACILITY_ID: FRA
       METAL_CORE_LOG_LEVEL: DEBUG
       METAL_CORE_METAL_API_PORT: 8090
+      METAL_CORE_HAMMER_IMAGE_PREFIX: metal-hammer
 
   swagger:
     image: swaggerapi/swagger-ui
