Adjust docker-compose files

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,11 @@
 version: '2'
 
 services:
+  rethinkdb:
+    image: rethinkdb
+    container_name: rethinkdb
+    network_mode: host
+
   pixiecore:
     image: danderson/pixiecore
     container_name: pixiecore
@@ -36,14 +41,19 @@ services:
     environment:
       METAL_API_WITH_MOCK_DATA: "true"
       METAL_API_BIND_ADDR: localhost
-    command: ["/metal-api", "--port", "8090"]
+      METAL_API_DB_ADDR: localhost:28015
+    command: >
+      /bin/sh -c "
+        sleep 1;
+        /metal-api --port 8090;
+      "
 
   metal-hammer:
     image: registry.fi-ts.io/metal/metal-hammer
     container_name: metal-hammer
     network_mode: host
-    depends_on:
-      - pixiecore
-      - metal-core
-      - swagger
-      - metal-api
+    command: >
+      /bin/sh -c "
+        sleep 6;
+        /bin/metal-hammer;
+      "
