Ensure images are available

--- a/test/e2e/workflow_test.yaml
+++ b/test/e2e/workflow_test.yaml
@@ -10,7 +10,7 @@ services:
 
   metal-core:
     build:
-      context: .
+      context: ../..
     image: registry.fi-ts.io/metal/metal-core
     container_name: metal-core-test
     network_mode: host
