--- a/test/e2e/workflow_test.yaml
+++ b/test/e2e/workflow_test.yaml
@@ -21,6 +21,8 @@ services:
       METAL_CORE_METAL_API_PORT: 18081
 
   metal-api:
+    build:
+      context: ../../../maas-service
     image: registry.fi-ts.io/metal/metal-api
     container_name: metal-api-test
     tty: true
@@ -29,14 +31,21 @@ services:
       METAL_API_WITH_MOCK_DATA: "true"
       METAL_API_BIND_ADDR: localhost
       METAL_API_DB_ADDR: localhost:28015
-    command: ["/metal-api", "--port", "18081"]
+    command: >
+      /bin/sh -c "
+        sleep 1
+        /metal-api --port 18081
+      "
 
   metal-hammer:
+    build:
+      context: ../../../metal-hammer
+      dockerfile: ../metal-core/test/e2e/MetalHammer
     image: registry.fi-ts.io/metal/metal-hammer
     container_name: metal-hammer-test
     network_mode: host
     command: >
       /bin/sh -c "
         sleep 3
-        /bin/metal-hammer
+        /metal-hammer
       "
