Run metal-hammer in scratch container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,11 +44,7 @@ services:
       METAL_API_WITH_MOCK_DATA: "true"
       METAL_API_BIND_ADDR: localhost
       METAL_API_DB_ADDR: localhost:28015
-    command: >
-      /bin/sh -c "
-        sleep 1;
-        /metal-api --port 8090;
-      "
+    command: ["/metal-api", "--port", "8090"]
 
   metal-hammer:
     build:
@@ -57,8 +53,3 @@ services:
     image: registry.fi-ts.io/metal/metal-hammer
     container_name: metal-hammer
     network_mode: host
-    command: >
-      /bin/sh -c "
-        sleep 6;
-        /metal-hammer;
-      "
