--- a/test/e2e/workflow_test.yaml
+++ b/test/e2e/workflow_test.yaml
@@ -15,6 +15,7 @@ services:
     container_name: ${METAL_CORE_CONTAINER_NAME}
     network_mode: host
     environment:
+      METAL_CORE_PORT: ${METAL_CORE_PORT}
       METAL_CORE_CONTROL_PLANE_IP: localhost
       METAL_CORE_FACILITY_ID: FRA
       METAL_CORE_LOG_LEVEL: DEBUG
