--- a/test/e2e/workflow_test.yaml
+++ b/test/e2e/workflow_test.yaml
@@ -17,7 +17,8 @@ services:
     environment:
       METAL_CORE_PORT: ${METAL_CORE_PORT}
       METAL_CORE_CONTROL_PLANE_IP: localhost
-      METAL_CORE_FACILITY_ID: FRA
+      METAL_CORE_SITE_ID: FRA
+      METAL_CORE_RACK_ID: Vagrant Rack 1
       METAL_CORE_LOG_LEVEL: DEBUG
       METAL_CORE_METAL_API_PORT: ${METAL_API_PORT}
 
