--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,3 +1,25 @@
+FROM golang:1.11-stretch as builder
+
+ENV CGO_ENABLED=0 \
+    GO111MODULE=on \
+    GOOS=linux \
+    GOPROXY=https://gomods.fi-ts.io
+
+COPY metallib /metallib
+
+WORKDIR /build/metal-core
+
+# Install dependencies and Mage
+COPY go.mod ./
+RUN go mod download \
+ && go get github.com/magefile/mage
+
+# Copy source code
+COPY . .
+
+# Test and build metal-core
+RUN mage build:model test:unit test:int build:bin
+
 FROM alpine:3.8
 LABEL maintainer FI-TS Devops <devops@f-i-ts.de>
 
@@ -6,6 +28,6 @@ RUN apk update \
     ca-certificates \
     ipmitool
 
-COPY bin/metal-core /
+COPY --from=builder /build/metal-core/bin/metal-core /
 
 ENTRYPOINT ["/metal-core"]
