--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,38 +1,72 @@
 version: '2'
 
+networks:
+  metal:
+    driver: bridge
+
+volumes:
+  nsq-data-volume:
+
 services:
+  nsqlookupd:
+    image: nsqio/nsq:v1.1.0
+    container_name: nsqlookupd
+    networks:
+      - metal
+    volumes:
+      - nsq-data-volume:/data
+    command: /nsqlookupd -log-level error
+    ports:
+      - "4160"
+      - "4161"
+
+  nsqd:
+    image: nsqio/nsq:v1.1.0
+    container_name: nsqd
+    networks:
+      - metal
+    command: /nsqd -log-level error --lookupd-tcp-address=nsqlookupd:4160
+    depends_on:
+    - nsqlookupd
+    ports:
+      - "4150"
+      - "4151"
+
+  nsqadmin:
+    image: nsqio/nsq:v1.1.0
+    container_name: nsqadmin
+    networks:
+      - metal
+    command: /nsqadmin -log-level error --lookupd-http-address=nsqlookupd:4161
+    depends_on:
+      - nsqlookupd
+    ports:
+      - "4171:4171"
+
   rethinkdb:
     image: rethinkdb
     container_name: rethinkdb
-    network_mode: host
-
-  pixiecore:
-    image: danderson/pixiecore
-    container_name: pixiecore
-    command: ["api", "http://localhost:4242", "--dhcp-no-bind"]
-    network_mode: host
+    networks:
+      - metal
+    ports:
+      - "10080:8080"
+      - "28015:28015"
 
   metal-core:
     build:
       context: .
     image: registry.fi-ts.io/metal/metal-core
     container_name: metal-core
-    network_mode: host
+    networks:
+      - metal
     environment:
-      METAL_CORE_CONTROL_PLANE_IP: localhost
+      METAL_CORE_MQ_ADDRESS: nsqlookupd:4161
+      METAL_CORE_CONTROL_PLANE_IP: 0.0.0.0
       METAL_CORE_SITE_ID: FRA
       METAL_CORE_RACK_ID: Vagrant Rack 1
       METAL_CORE_LOG_LEVEL: DEBUG
       METAL_CORE_METAL_API_PORT: 8090
       METAL_CORE_HAMMER_IMAGE_PREFIX: metal-hammer
-
-  swagger:
-    image: swaggerapi/swagger-ui
-    container_name: swagger-ui
-    network_mode: host
-    environment:
-      PORT: 9090
-      API_URL: http://localhost:8090/apidocs.json
 
   metal-api:
     build:
@@ -40,18 +74,36 @@ services:
       dockerfile: Dockerfile.dev
     image: registry.fi-ts.io/metal/metal-api
     container_name: metal-api
+    networks:
+      - metal
     tty: true
-    network_mode: host
     environment:
       METAL_API_WITH_MOCK_DATA: "true"
-      METAL_API_BIND_ADDR: localhost
-      METAL_API_DB_ADDR: localhost:28015
+      METAL_API_BIND_ADDR: 0.0.0.0
+      METAL_API_DB_ADDR: rethinkdb:28015
+      METAL_API_NETBOX_ADDR: 172.18.0.1:8001
+      METAL_API_NSQD_ADDR: nsqd:4150
+      METAL_API_NSQD_HTTP_ADDR: nsqd:4151
+      METAL_API_LOG_LEVEL: "debug"
     command: ["/metal-api", "--port", "8090"]
 
-  metal-hammer:
-    build:
-      context: ../metal-hammer
-      dockerfile: ../metal-core/test/e2e/MetalHammer
-    image: registry.fi-ts.io/metal/metal-hammer
-    container_name: metal-hammer
-    network_mode: host
+  metal-core-swagger:
+    image: swaggerapi/swagger-ui
+    container_name: core-swagger-ui
+    networks:
+      - metal
+    ports:
+      - "9099:8080"
+    environment:
+      API_URL: http://localhost:8080/apidocs.json
+
+  metal-api-swagger:
+    image: swaggerapi/swagger-ui
+    container_name: api-swagger-ui
+    networks:
+      - metal
+    ports:
+      - "9090:8080"
+    environment:
+      API_URL: http://localhost:8080/apidocs.json
+
