--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,13 +59,17 @@ services:
     container_name: metal-core
     networks:
       - metal
+    ports:
+      - "4242:4242"
     environment:
+      METAL_CORE_ADDRESS: 0.0.0.0
+      METAL_CORE_PORT: 4242
       METAL_CORE_MQ_ADDRESS: nsqlookupd:4161
       METAL_CORE_CONTROL_PLANE_IP: 0.0.0.0
       METAL_CORE_SITE_ID: FRA
       METAL_CORE_RACK_ID: Vagrant Rack 1
       METAL_CORE_LOG_LEVEL: DEBUG
-      METAL_CORE_METAL_API_PORT: 8090
+      METAL_CORE_METAL_API_PORT: 8080
       METAL_CORE_HAMMER_IMAGE_PREFIX: metal-hammer
 
   metal-api:
@@ -76,16 +80,17 @@ services:
     container_name: metal-api
     networks:
       - metal
+    ports:
+      - "8080:8080"
     tty: true
     environment:
-      METAL_API_WITH_MOCK_DATA: "true"
       METAL_API_BIND_ADDR: 0.0.0.0
+      METAL_API_PORT: 8080
       METAL_API_DB_ADDR: rethinkdb:28015
       METAL_API_NETBOX_ADDR: 172.18.0.1:8001
       METAL_API_NSQD_ADDR: nsqd:4150
       METAL_API_NSQD_HTTP_ADDR: nsqd:4151
-      METAL_API_LOG_LEVEL: "debug"
-    command: ["/metal-api", "--port", "8090"]
+      METAL_API_LOG_LEVEL: debug
 
   metal-core-swagger:
     image: swaggerapi/swagger-ui
@@ -93,9 +98,9 @@ services:
     networks:
       - metal
     ports:
-      - "9099:8080"
+      - "9090:8080"
     environment:
-      API_URL: http://localhost:8080/apidocs.json
+      API_URL: http://localhost:4242/apidocs.json
 
   metal-api-swagger:
     image: swaggerapi/swagger-ui
@@ -103,7 +108,7 @@ services:
     networks:
       - metal
     ports:
-      - "9090:8080"
+      - "9099:8080"
     environment:
       API_URL: http://localhost:8080/apidocs.json
 
