--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,31 +18,31 @@ services:
       - nsq-data-volume:/data
     command: /nsqlookupd -log-level error
     ports:
-      - "4160"
-      - "4161"
+      - "${NSQLOOKUPD_TCP_PORT}"
+      - "${NSQLOOKUPD_HTTP_PORT}"
 
   nsqd:
     image: nsqio/nsq:v1.1.0
     container_name: nsqd
     networks:
       - metal
-    command: /nsqd -log-level error --lookupd-tcp-address=nsqlookupd:4160
+    command: /nsqd -log-level error --lookupd-tcp-address=nsqlookupd:${NSQLOOKUPD_TCP_PORT}
     depends_on:
     - nsqlookupd
     ports:
-      - "4150"
-      - "4151"
+      - "${NSQD_TCP_PORT}"
+      - "${NSQD_HTTP_PORT}"
 
   nsqadmin:
     image: nsqio/nsq:v1.1.0
     container_name: nsqadmin
     networks:
       - metal
-    command: /nsqadmin -log-level error --lookupd-http-address=nsqlookupd:4161
+    command: /nsqadmin -log-level error --lookupd-http-address=nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
     depends_on:
       - nsqlookupd
     ports:
-      - "4171:4171"
+      - "${NSQADMIN_HTTP_PORT}:${NSQADMIN_HTTP_PORT}"
 
   rethinkdb:
     image: rethinkdb
@@ -51,7 +51,7 @@ services:
       - metal
     ports:
       - "10080:8080"
-      - "28015:28015"
+      - "${RETHINKDB_PORT}:${RETHINKDB_PORT}"
 
   metal-core:
     build:
@@ -61,16 +61,16 @@ services:
     networks:
       - metal
     ports:
-      - "4242:4242"
+      - "${METAL_CORE_PORT}:${METAL_CORE_PORT}"
     environment:
       METAL_CORE_ADDRESS: 0.0.0.0
-      METAL_CORE_PORT: 4242
-      METAL_CORE_MQ_ADDRESS: nsqlookupd:4161
+      METAL_CORE_PORT: ${METAL_CORE_PORT}
+      METAL_CORE_MQ_ADDRESS: nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
       METAL_CORE_CONTROL_PLANE_IP: 0.0.0.0
       METAL_CORE_SITE_ID: FRA
       METAL_CORE_RACK_ID: Vagrant Rack 1
       METAL_CORE_LOG_LEVEL: DEBUG
-      METAL_CORE_METAL_API_PORT: 8080
+      METAL_CORE_METAL_API_PORT: ${METAL_API_PORT}
       METAL_CORE_HAMMER_IMAGE_PREFIX: metal-hammer
 
   metal-api:
@@ -82,15 +82,15 @@ services:
     networks:
       - metal
     ports:
-      - "8080:8080"
+      - "${METAL_API_PORT}:${METAL_API_PORT}"
     tty: true
     environment:
       METAL_API_BIND_ADDR: 0.0.0.0
-      METAL_API_PORT: 8080
-      METAL_API_DB_ADDR: rethinkdb:28015
-      METAL_API_NETBOX_ADDR: 172.18.0.1:8001
-      METAL_API_NSQD_ADDR: nsqd:4150
-      METAL_API_NSQD_HTTP_ADDR: nsqd:4151
+      METAL_API_PORT: ${METAL_API_PORT}
+      METAL_API_DB_ADDR: rethinkdb:${RETHINKDB_PORT}
+      METAL_API_NETBOX_ADDR: 172.18.0.1:${NETBOX_PORT}
+      METAL_API_NSQD_ADDR: nsqd:${NSQD_TCP_PORT}
+      METAL_API_NSQD_HTTP_ADDR: nsqd:${NSQD_HTTP_PORT}
       METAL_API_LOG_LEVEL: debug
 
   metal-core-swagger:
@@ -99,9 +99,9 @@ services:
     networks:
       - metal
     ports:
-      - "9090:8080"
+      - "${CORE_SWAGGER_PORT}:${SWAGGER_PORT}"
     environment:
-      API_URL: http://localhost:4242/apidocs.json
+      API_URL: http://localhost:${METAL_CORE_PORT}/apidocs.json
 
   metal-api-swagger:
     image: swaggerapi/swagger-ui
@@ -109,7 +109,7 @@ services:
     networks:
       - metal
     ports:
-      - "9099:8080"
+      - "${API_SWAGGER_PORT}:${SWAGGER_PORT}"
     environment:
-      API_URL: http://localhost:8080/apidocs.json
+      API_URL: http://localhost:${METAL_API_PORT}/apidocs.json
 
