--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,7 +66,7 @@ services:
       METAL_CORE_ADDRESS: 0.0.0.0
       METAL_CORE_PORT: ${METAL_CORE_PORT}
       METAL_CORE_MQ_ADDRESS: nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
-      METAL_CORE_CONTROL_PLANE_IP: 0.0.0.0
+      METAL_CORE_CONTROL_PLANE_IP: 172.18.0.1
       METAL_CORE_SITE_ID: FRA
       METAL_CORE_RACK_ID: Vagrant Rack 1
       METAL_CORE_LOG_LEVEL: DEBUG
@@ -89,8 +89,8 @@ services:
       METAL_API_PORT: ${METAL_API_PORT}
       METAL_API_DB_ADDR: rethinkdb:${RETHINKDB_PORT}
       METAL_API_NETBOX_ADDR: 172.18.0.1:${NETBOX_PORT}
-      METAL_API_NSQD_ADDR: nsqd:${NSQD_TCP_PORT}
-      METAL_API_NSQD_HTTP_ADDR: nsqd:${NSQD_HTTP_PORT}
+      METAL_API_NSQD_ADDR: nsqlookupd:${NSQLOOKUPD_TCP_PORT}
+      METAL_API_NSQD_HTTP_ADDR: nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
       METAL_API_LOG_LEVEL: debug
 
   metal-core-swagger:
