--- a/test/e2e/.env
+++ b/test/e2e/.env
@@ -1,8 +1,19 @@
-METAL_CORE_PORT=4242
-METAL_API_PORT=18081
 RETHINKDB_PORT=28015
+METAL_CORE_PORT=4242
+METAL_API_PORT=8080
+SWAGGER_PORT=8080
+CORE_SWAGGER_PORT=9090
+API_SWAGGER_PORT=9099
+NETBOX_PORT=8001
+NSQLOOKUPD_TCP_PORT=4160
+NSQLOOKUPD_HTTP_PORT=4161
+NSQD_TCP_PORT=4150
+NSQD_HTTP_PORT=4151
+NSQADMIN_HTTP_PORT=4171
 
+NSQLOOKUPD_CONTAINER_NAME=nsqlookupd-test
+NSQD_CONTAINER_NAME=nsqd-test
+RETHINKDB_CONTAINER_NAME=rethinkdb-test
 METAL_HAMMER_CONTAINER_NAME=metal-hammer-test
 METAL_CORE_CONTAINER_NAME=metal-core-test
 METAL_API_CONTAINER_NAME=metal-api-test
-RETHINKDB_CONTAINER_NAME=rethinkdb-test
