--- a/test/e2e/workflow_test.yaml
+++ b/test/e2e/workflow_test.yaml
@@ -1,26 +1,63 @@
-version: '2'
+version: '3.5'
+
+networks:
+  metaltest:
+    name: metaltest
+    driver: bridge
+
+volumes:
+  nsq-data-volume:
 
 services:
+  nsqlookupd:
+    image: nsqio/nsq:v1.1.0
+    container_name: ${NSQLOOKUPD_CONTAINER_NAME}
+    networks:
+      - metaltest
+    volumes:
+      - nsq-data-volume:/data
+    command: /nsqlookupd -log-level error
+    ports:
+      - "${NSQLOOKUPD_TCP_PORT}"
+      - "${NSQLOOKUPD_HTTP_PORT}"
+
+  nsqd:
+    image: nsqio/nsq:v1.1.0
+    container_name: ${NSQD_CONTAINER_NAME}
+    networks:
+      - metaltest
+    command: /nsqd -log-level error --lookupd-tcp-address=nsqlookupd:${NSQLOOKUPD_TCP_PORT}
+    depends_on:
+      - nsqlookupd
+    ports:
+      - "${NSQD_TCP_PORT}"
+      - "${NSQD_HTTP_PORT}"
+
   rethinkdb:
     build:
       context: rethinkdb
     image: rethinkdb:test
     container_name: ${RETHINKDB_CONTAINER_NAME}
-    network_mode: host
+    networks:
+      - metaltest
 
   metal-core:
     build:
       context: ../..
     image: registry.fi-ts.io/metal/metal-core
     container_name: ${METAL_CORE_CONTAINER_NAME}
-    network_mode: host
+    networks:
+      - metaltest
     environment:
+      METAL_CORE_ADDRESS: 0.0.0.0
       METAL_CORE_PORT: ${METAL_CORE_PORT}
-      METAL_CORE_CONTROL_PLANE_IP: localhost
+      METAL_CORE_MQ_ADDRESS: nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
+      METAL_CORE_CONTROL_PLANE_IP: 172.18.0.1
       METAL_CORE_SITE_ID: FRA
       METAL_CORE_RACK_ID: Vagrant Rack 1
       METAL_CORE_LOG_LEVEL: DEBUG
       METAL_CORE_METAL_API_PORT: ${METAL_API_PORT}
+      METAL_CORE_HAMMER_IMAGE_PREFIX: metal-hammer
 
   metal-api:
     build:
@@ -28,12 +65,16 @@ services:
     image: registry.fi-ts.io/metal/metal-api
     container_name: ${METAL_API_CONTAINER_NAME}
     tty: true
-    network_mode: host
+    networks:
+      - metaltest
     environment:
-      METAL_API_WITH_MOCK_DATA: "true"
-      METAL_API_BIND_ADDR: localhost
-      METAL_API_DB_ADDR: localhost:${RETHINKDB_PORT}
-    command: ["/metal-api", "--port", "${METAL_API_PORT}"]
+      METAL_API_BIND_ADDR: 0.0.0.0
+      METAL_API_PORT: ${METAL_API_PORT}
+      METAL_API_DB_ADDR: rethinkdb:${RETHINKDB_PORT}
+      METAL_API_NETBOX_ADDR: 172.18.0.1:${NETBOX_PORT}
+      METAL_API_NSQD_ADDR: nsqlookupd:${NSQLOOKUPD_TCP_PORT}
+      METAL_API_NSQD_HTTP_ADDR: nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
+      METAL_API_LOG_LEVEL: debug
 
   metal-hammer:
     build:
@@ -41,4 +82,5 @@ services:
       dockerfile: ../metal-core/test/e2e/MetalHammer
     image: registry.fi-ts.io/metal/metal-hammer
     container_name: ${METAL_HAMMER_CONTAINER_NAME}
-    network_mode: host
+    networks:
+      - metaltest
