--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ RETHINKDB_PORT=28015
 METAL_CORE_PORT=4242
 METAL_API_PORT=8080
 SWAGGER_PORT=8080
-CORE_SWAGGER_PORT=9090
+CORE_SWAGGER_PORT=9098
 API_SWAGGER_PORT=9099
 NETBOX_PORT=8001
 NSQLOOKUPD_TCP_PORT=4160
@@ -10,3 +10,7 @@ NSQLOOKUPD_HTTP_PORT=4161
 NSQD_TCP_PORT=4150
 NSQD_HTTP_PORT=4151
 NSQADMIN_HTTP_PORT=4171
+
+NETWORK_SUBNET=10.0.0.0/24
+NETWORK_GATEWAY=10.0.0.1
+METAL_API_IP=10.0.0.10
