--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,10 @@ networks:
   metal:
     name: metal
     driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: ${NETWORK_SUBNET}
 
 volumes:
   nsq-data-volume:
@@ -66,10 +70,11 @@ services:
       METAL_CORE_ADDRESS: 0.0.0.0
       METAL_CORE_PORT: ${METAL_CORE_PORT}
       METAL_CORE_MQ_ADDRESS: nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
-      METAL_CORE_CONTROL_PLANE_IP: 172.18.0.1
+      METAL_CORE_CONTROL_PLANE_IP: ${METAL_API_IP}
       METAL_CORE_SITE_ID: FRA
       METAL_CORE_RACK_ID: Vagrant Rack 1
       METAL_CORE_LOG_LEVEL: DEBUG
+      METAL_CORE_METAL_API_ADDRESS: metal-api
       METAL_CORE_METAL_API_PORT: ${METAL_API_PORT}
       METAL_CORE_HAMMER_IMAGE_PREFIX: metal-hammer
 
@@ -88,7 +93,7 @@ services:
       METAL_API_BIND_ADDR: 0.0.0.0
       METAL_API_PORT: ${METAL_API_PORT}
       METAL_API_DB_ADDR: rethinkdb:${RETHINKDB_PORT}
-      METAL_API_NETBOX_ADDR: 172.18.0.1:${NETBOX_PORT}
+      METAL_API_NETBOX_ADDR: ${SUBNET_GATEWAY}:${NETBOX_PORT}
       METAL_API_NSQD_ADDR: nsqlookupd:${NSQLOOKUPD_TCP_PORT}
       METAL_API_NSQD_HTTP_ADDR: nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
       METAL_API_LOG_LEVEL: debug
