--- a/test/e2e/.env
+++ b/test/e2e/.env
@@ -11,6 +11,7 @@ NSQD_TCP_PORT=4150
 NSQD_HTTP_PORT=4151
 NSQADMIN_HTTP_PORT=4171
 
+NETWORK_NAME=metal
 NETWORK_SUBNET=10.0.0.0/24
 NETWORK_GATEWAY=10.0.0.1
 METAL_API_IP=10.0.0.10
