Adjust config parameter names accordingly

--- a/test/e2e/.env
+++ b/test/e2e/.env
@@ -14,7 +14,7 @@ NSQADMIN_HTTP_PORT=4171
 NETWORK_NAME=metal
 NETWORK_SUBNET=10.0.0.0/24
 NETWORK_GATEWAY=10.0.0.1
-METAL_API_IP=10.0.0.10
+METAL_CORE_IP=10.0.0.10
 
 NSQLOOKUPD_CONTAINER_NAME=nsqlookupd-test
 NSQD_CONTAINER_NAME=nsqd-test
