--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,7 +32,7 @@ services:
       - metal
     command: /nsqd -log-level error --lookupd-tcp-address=nsqlookupd:${NSQLOOKUPD_TCP_PORT}
     depends_on:
-    - nsqlookupd
+      - nsqlookupd
     ports:
       - "${NSQD_TCP_PORT}"
       - "${NSQD_HTTP_PORT}"
@@ -63,14 +63,15 @@ services:
     image: registry.fi-ts.io/metal/metal-core
     container_name: metal-core
     networks:
-      - metal
+      metal:
+        ipv4_address: ${METAL_CORE_IP}
     ports:
       - "${METAL_CORE_PORT}:${METAL_CORE_PORT}"
     environment:
-      METAL_CORE_ADDRESS: 0.0.0.0
+      METAL_CORE_BIND_ADDRESS: 0.0.0.0
+      METAL_CORE_IP: ${METAL_CORE_IP}
       METAL_CORE_PORT: ${METAL_CORE_PORT}
       METAL_CORE_MQ_ADDRESS: nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
-      METAL_CORE_CONTROL_PLANE_IP: ${METAL_API_IP}
       METAL_CORE_SITE_ID: FRA
       METAL_CORE_RACK_ID: Vagrant Rack 1
       METAL_CORE_LOG_LEVEL: DEBUG
