--- a/test/e2e/workflow_test.yaml
+++ b/test/e2e/workflow_test.yaml
@@ -51,12 +51,13 @@ services:
     image: registry.fi-ts.io/metal/metal-core
     container_name: ${METAL_CORE_CONTAINER_NAME}
     networks:
-      - metal
+      metal:
+        ipv4_address: ${METAL_CORE_IP}
     environment:
-      METAL_CORE_ADDRESS: 0.0.0.0
+      METAL_CORE_BIND_ADDRESS: 0.0.0.0
+      METAL_CORE_IP: ${METAL_CORE_IP}
       METAL_CORE_PORT: ${METAL_CORE_PORT}
       METAL_CORE_MQ_ADDRESS: nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
-      METAL_CORE_CONTROL_PLANE_IP: ${METAL_API_IP}
       METAL_CORE_SITE_ID: FRA
       METAL_CORE_RACK_ID: Vagrant Rack 1
       METAL_CORE_LOG_LEVEL: DEBUG
@@ -71,8 +72,7 @@ services:
     container_name: ${METAL_API_CONTAINER_NAME}
     tty: true
     networks:
-      metal:
-        ipv4_address: ${METAL_API_IP}
+      - metal
     environment:
       METAL_API_BIND_ADDR: 0.0.0.0
       METAL_API_PORT: ${METAL_API_PORT}
