--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -94,7 +94,7 @@ services:
       METAL_API_BIND_ADDR: 0.0.0.0
       METAL_API_PORT: ${METAL_API_PORT}
       METAL_API_DB_ADDR: rethinkdb:${RETHINKDB_PORT}
-      METAL_API_NETBOX_ADDR: ${SUBNET_GATEWAY}:${NETBOX_PORT}
+      METAL_API_NETBOX_ADDR: ${NETWORK_GATEWAY}:${NETBOX_PORT}
       METAL_API_NSQD_ADDR: nsqlookupd:${NSQLOOKUPD_TCP_PORT}
       METAL_API_NSQD_HTTP_ADDR: nsqlookupd:${NSQLOOKUPD_HTTP_PORT}
       METAL_API_LOG_LEVEL: debug
