--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -75,7 +75,7 @@ services:
       METAL_CORE_SITE_ID: FRA
       METAL_CORE_RACK_ID: Vagrant Rack 1
       METAL_CORE_LOG_LEVEL: DEBUG
-      METAL_CORE_METAL_API_ADDRESS: metal-api
+      METAL_CORE_METAL_API_IP: metal-api
       METAL_CORE_METAL_API_PORT: ${METAL_API_PORT}
       METAL_CORE_HAMMER_IMAGE_PREFIX: metal-hammer
 
