--- a/test/e2e/.env
+++ b/test/e2e/.env
@@ -1,16 +1,3 @@
-RETHINKDB_PORT=28015
-METAL_CORE_PORT=4242
-METAL_API_PORT=8080
-SWAGGER_PORT=8080
-CORE_SWAGGER_PORT=9098
-API_SWAGGER_PORT=9099
-NETBOX_PORT=8001
-NSQLOOKUPD_TCP_PORT=4160
-NSQLOOKUPD_HTTP_PORT=4161
-NSQD_TCP_PORT=4150
-NSQD_HTTP_PORT=4151
-NSQADMIN_HTTP_PORT=4171
-
 NETWORK_NAME=metal
 NETWORK_SUBNET=10.0.0.0/24
 NETWORK_GATEWAY=10.0.0.1
@@ -22,3 +9,28 @@ RETHINKDB_CONTAINER_NAME=rethinkdb-test
 METAL_HAMMER_CONTAINER_NAME=metal-hammer-test
 METAL_CORE_CONTAINER_NAME=metal-core-test
 METAL_API_CONTAINER_NAME=metal-api-test
+NETBOX_CONTAINER_NAME=netbox-test
+NETBOX_POSTGRES_CONTAINER_NAME=netbox-postgres-test
+NETBOX_NGINX_CONTAINER_NAME=netbox-nginx-test
+NETBOX_API_PROXY_CONTAINER_NAME=netbox-api-proxy-test
+NETBOX_INIT_CONFIG_CONTAINER_NAME=netbox-init-config-test
+
+RETHINKDB_PORT=28015
+
+METAL_CORE_PORT=4242
+METAL_API_PORT=8080
+
+SWAGGER_PORT=8080
+CORE_SWAGGER_PORT=9098
+API_SWAGGER_PORT=9099
+
+NSQLOOKUPD_TCP_PORT=4160
+NSQLOOKUPD_HTTP_PORT=4161
+NSQD_TCP_PORT=4150
+NSQD_HTTP_PORT=4151
+NSQADMIN_HTTP_PORT=4171
+
+NETBOX_INTERNAL_PORT=8000
+NETBOX_NGINX_PORT=8000
+NETBOX_API_PROXY_PORT=8001
+NETBOX_PORT=8002
