--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+NETWORK_NAME=metal
+NETWORK_SUBNET=10.0.0.0/24
+METAL_CORE_IP=10.0.0.10
+
 RETHINKDB_PORT=28015
 METAL_CORE_PORT=4242
 METAL_API_PORT=8080
@@ -11,7 +15,4 @@ NSQD_TCP_PORT=4150
 NSQD_HTTP_PORT=4151
 NSQADMIN_HTTP_PORT=4171
 
-NETWORK_NAME=metal
-NETWORK_SUBNET=10.0.0.0/24
-NETWORK_GATEWAY=10.0.0.1
-METAL_CORE_IP=10.0.0.10
+METAL_CORE_CONTAINER_NAME=metal-core
