--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,5 +24,5 @@ services:
       METAL_CORE_BIND_ADDRESS: 0.0.0.0
       METAL_CORE_IP: ${METAL_CORE_IP}
       METAL_CORE_PORT: ${METAL_CORE_PORT}
-      METAL_CORE_SITE_ID: FRA
+      METAL_CORE_PARTITION_ID: FRA
       METAL_CORE_RACK_ID: Vagrant Rack 1
