Handle firewalls correctly; see changes in metal-api cloud-native/metal/metal-apimake

--- a/switcher/test_data/lab/frr.conf
+++ b/switcher/test_data/lab/frr.conf
@@ -3,7 +3,12 @@ frr defaults datacenter
 hostname leaf01
 username cumulus nopassword
 service integrated-vtysh-config
-log syslog informational
+!
+log syslog debugging
+debug bgp updates
+debug bgp nht
+debug bgp update-groups
+debug bgp zebra
 !
 vrf vrf104001
  vni 104001
