--- a/switcher/test_data/dev/frr.conf
+++ b/switcher/test_data/dev/frr.conf
@@ -3,7 +3,12 @@ frr defaults datacenter
 hostname leaf01
 username cumulus nopassword
 service integrated-vtysh-config
-log syslog informational
+!
+log syslog debugging
+debug bgp updates
+debug bgp nht
+debug bgp update-groups
+debug bgp zebra
 !
 vrf vrf104001
  vni 104001
@@ -34,17 +39,19 @@ router bgp 4200000010
  neighbor FABRIC peer-group
  neighbor FABRIC remote-as external
  neighbor FABRIC timers 1 3
+ neighbor swp3 interface peer-group FABRIC
  neighbor swp31 interface peer-group FABRIC
  neighbor swp32 interface peer-group FABRIC
- neighbor swp3 interface peer-group FABRIC
  !
  address-family ipv4 unicast
   redistribute connected route-map LOOPBACKS
+  neighbor swp3 allowas-in 1
  exit-address-family
  !
  address-family l2vpn evpn
   neighbor FABRIC activate
   advertise-all-vni
+  neighbor swp3 allowas-in 1
  exit-address-family
 !
 route-map LOOPBACKS permit 10
