--- a/switcher/test_data/dev/conf.yaml
+++ b/switcher/test_data/dev/conf.yaml
@@ -3,27 +3,38 @@ name: leaf01
 loopback: 10.0.0.10
 asn: 4200000010
 metalcorecidr: 10.255.255.2/24
-eth0:
-  addresscidr: 192.168.101.12/24
-  gateway: 192.168.101.1
+ports:
+  eth0:
+    addresscidr: 192.168.101.12/24
+    gateway: 192.168.101.1
+  bladeports:
+    - swp7
+    - swp8
+  underlay:
+    - swp31
+    - swp32
+  unprovisioned:
+    - swp4
+    - swp5
+  firewalls:
+    swp3:
+      port: swp3
+      vnis:
+        - 104001
+        - 104009
+        - 104010
+      cidrs:
+        - "10.0.2.1/32"
+  vrfs:
+    vrf104001:
+      vlanid: 4001
+      vni: 104001
+      neighbors:
+        - swp1
+        - swp2
+      cidrs:
+        - "100.127.131.0/24"
+        - "212.17.234.17/32"
 additionalbridgevids:
   - 201-256
   - 301-356
-bladeports:
-  - swp7
-  - swp8
-neighbors:
-  - swp31
-  - swp32
-firewalls:
-  - swp3
-unprovisioned:
-  - swp4
-  - swp5
-tenants:
-  vrf104001:
-    vlanid: 4001
-    vni: 104001
-    neighbors:
-      - swp1
-      - swp2
