--- a/switcher/test_data/dev/frr.conf
+++ b/switcher/test_data/dev/frr.conf
@@ -46,16 +46,30 @@ router bgp 4200000010
  address-family ipv4 unicast
   redistribute connected route-map LOOPBACKS
   neighbor swp3 allowas-in 1
+  neighbor swp3 route-map fw-swp3-in in
  exit-address-family
  !
  address-family l2vpn evpn
   neighbor FABRIC activate
   advertise-all-vni
   neighbor swp3 allowas-in 1
+  # neighbor swp3 route-map fw-swp3-vni in # currently not supported, PR https://github.com/FRRouting/frr/pull/4078/files needs to be merged into Cumulus FRR
+  neighbor swp3 route-map fw-swp3-vni out
  exit-address-family
 !
 route-map LOOPBACKS permit 10
  match interface lo
+!
+# route-maps for firewall@swp3
+ip prefix-list fw-swp3-in-prefixes seq 10 permit 10.0.2.1/32 le 32
+route-map fw-swp3-in permit 10
+ match ip address prefix-list fw-swp3-in-prefixes
+route-map fw-swp3-vni permit 10
+ match evpn vni 104001
+route-map fw-swp3-vni permit 11
+ match evpn vni 104009
+route-map fw-swp3-vni permit 12
+ match evpn vni 104010
 !
 ip route 0.0.0.0/0 192.168.101.1 nexthop-vrf mgmt
 !
@@ -71,11 +85,18 @@ router bgp 4200000010 vrf vrf104001
  address-family ipv4 unicast
   redistribute connected
   neighbor MACHINE maximum-prefix 100
+  neighbor MACHINE route-map vrf104001-in in
  exit-address-family
  !
  address-family l2vpn evpn
   advertise ipv4 unicast
  exit-address-family
+!
+# route-maps for vrf104001
+ip prefix-list vrf104001-in-prefixes seq 10 permit 100.127.131.0/24 le 32
+ip prefix-list vrf104001-in-prefixes seq 11 permit 212.17.234.17/32 le 32
+route-map vrf104001-in permit 10
+ match ip address prefix-list vrf104001-in-prefixes
 !
 line vty
 !
