--- a/switcher/test_data/notenants/conf.yaml
+++ b/switcher/test_data/notenants/conf.yaml
@@ -4,14 +4,13 @@ loopback: 10.0.0.10
 asn: 4200000010
 devmode: true
 metalcorecidr: 10.255.255.2/24
-eth0:
-  addresscidr: 192.168.0.11
-  gateway: 192.168.0.254
-neighbors:
-  - swp31
-  - swp32
-unprovisioned:
-  - swp1
-  - swp2
-
-
+ports:
+  eth0:
+    addresscidr: 192.168.0.11
+    gateway: 192.168.0.254
+  underlay:
+    - swp31
+    - swp32
+  unprovisioned:
+    - swp1
+    - swp2
