--- a/switcher/test_data/lab/frr.conf
+++ b/switcher/test_data/lab/frr.conf
@@ -41,19 +41,38 @@ router bgp 4200000010
  neighbor FABRIC timers 1 3
  neighbor swp31 interface peer-group FABRIC
  neighbor swp32 interface peer-group FABRIC
- neighbor swp3 interface peer-group FABRIC
+ neighbor FIREWALL peer-group
+ neighbor FIREWALL remote-as external
+ neighbor FIREWALL timers 1 3
+ neighbor swp3 interface peer-group FIREWALL
  !
  address-family ipv4 unicast
   redistribute connected route-map LOOPBACKS
+  neighbor FIREWALL allowas-in 1
+  neighbor swp3 route-map fw-swp3-in in
  exit-address-family
  !
  address-family l2vpn evpn
-  neighbor FABRIC activate
   advertise-all-vni
+  neighbor FABRIC activate
+  neighbor FIREWALL activate
+  neighbor FIREWALL allowas-in 1
+  neighbor swp3 route-map fw-swp3-vni out
  exit-address-family
 !
 route-map LOOPBACKS permit 10
  match interface lo
+!
+# route-maps for firewall@swp3
+ip prefix-list fw-swp3-in-prefixes seq 10 permit 10.0.2.1/32 le 32
+route-map fw-swp3-in permit 10
+ match ip address prefix-list fw-swp3-in-prefixes
+route-map fw-swp3-vni permit 10
+ match evpn vni 104001
+route-map fw-swp3-vni permit 11
+ match evpn vni 104009
+route-map fw-swp3-vni permit 12
+ match evpn vni 104010
 !
 ip route 0.0.0.0/0 192.168.0.254 nexthop-vrf mgmt
 !
