--- a/switcher/test_data/dev/frr.conf
+++ b/switcher/test_data/dev/frr.conf
@@ -39,21 +39,24 @@ router bgp 4200000010
  neighbor FABRIC peer-group
  neighbor FABRIC remote-as external
  neighbor FABRIC timers 1 3
- neighbor swp3 interface peer-group FABRIC
  neighbor swp31 interface peer-group FABRIC
  neighbor swp32 interface peer-group FABRIC
+ neighbor FIREWALL peer-group
+ neighbor FIREWALL remote-as external
+ neighbor FIREWALL timers 1 3
+ neighbor swp3 interface peer-group FIREWALL
  !
  address-family ipv4 unicast
   redistribute connected route-map LOOPBACKS
-  neighbor swp3 allowas-in 1
+  neighbor FIREWALL allowas-in 1
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
  !
  address-family l2vpn evpn
-  neighbor FABRIC activate
   advertise-all-vni
-  neighbor swp3 allowas-in 1
-  # neighbor swp3 route-map fw-swp3-vni in # currently not supported, PR https://github.com/FRRouting/frr/pull/4078/files needs to be merged into Cumulus FRR
+  neighbor FABRIC activate
+  neighbor FIREWALL activate
+  neighbor FIREWALL allowas-in 1
   neighbor swp3 route-map fw-swp3-vni out
  exit-address-family
 !
