--- a/switcher/test_data/notenants/frr.conf
+++ b/switcher/test_data/notenants/frr.conf
@@ -26,14 +26,20 @@ router bgp 4200000010
  neighbor FABRIC timers 1 3
  neighbor swp31 interface peer-group FABRIC
  neighbor swp32 interface peer-group FABRIC
+ neighbor FIREWALL peer-group
+ neighbor FIREWALL remote-as external
+ neighbor FIREWALL timers 1 3
  !
  address-family ipv4 unicast
   redistribute connected route-map LOOPBACKS
+  neighbor FIREWALL allowas-in 1
  exit-address-family
  !
  address-family l2vpn evpn
-  neighbor FABRIC activate
   advertise-all-vni
+  neighbor FABRIC activate
+  neighbor FIREWALL activate
+  neighbor FIREWALL allowas-in 1
  exit-address-family
 !
 route-map LOOPBACKS permit 10
