Allow pod cidrs announced from the machines

--- a/switcher/test_data/dev/frr.conf
+++ b/switcher/test_data/dev/frr.conf
@@ -98,6 +98,7 @@ router bgp 4200000010 vrf vrf104001
 # route-maps for vrf104001
 ip prefix-list vrf104001-in-prefixes seq 10 permit 100.127.131.0/24 le 32
 ip prefix-list vrf104001-in-prefixes seq 11 permit 212.17.234.17/32 le 32
+ip prefix-list vrf104001-in-prefixes seq 12 permit 10.244.0.0/16 le 32
 route-map vrf104001-in permit 10
  match ip address prefix-list vrf104001-in-prefixes
 !
