--- a/switcher/test_data/lab/frr.conf
+++ b/switcher/test_data/lab/frr.conf
@@ -88,11 +88,17 @@ router bgp 4200000010 vrf vrf104001
  address-family ipv4 unicast
   redistribute connected
   neighbor MACHINE maximum-prefix 100
+  neighbor MACHINE route-map vrf104001-in in
  exit-address-family
  !
  address-family l2vpn evpn
   advertise ipv4 unicast
  exit-address-family
+!
+# route-maps for vrf104001
+ip prefix-list vrf104001-in-prefixes seq 10 permit 10.244.0.0/16 le 32
+route-map vrf104001-in permit 10
+ match ip address prefix-list vrf104001-in-prefixes
 !
 line vty
 !
