--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,12 @@
 ---
-image: registry.cloud.fits/fits/buildtools:dev
+image: registry.cloud.fits/fits/buildtools:1
+
+before_script:
+  - curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.21.0
 
 merge-request-and-tags:
   script: 
+    - $(go env GOPATH)/bin/golangci-lint run
     - docker-make -x rule2,rule3 --summary --build-only metal-core-merge-request-and-tags
   only:
     - merge_requests
@@ -10,6 +14,7 @@ merge-request-and-tags:
 
 master:
   script:
+    - $(go env GOPATH)/bin/golangci-lint run
     - docker-make -x rule2,rule3 --summary --build-only metal-core
   only:
     - master
