--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,11 @@
 image: registry.cloud.fits/fits/buildtools:1
 
 before_script:
-  - curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.21.0
+  - curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b /bin v1.21.0
 
 merge-request-and-tags:
   script: 
-    - $(go env GOPATH)/bin/golangci-lint run
+    - /bin/golangci-lint run
     - docker-make -x rule2,rule3 --summary --build-only metal-core-merge-request-and-tags
   only:
     - merge_requests
@@ -14,7 +14,7 @@ merge-request-and-tags:
 
 master:
   script:
-    - $(go env GOPATH)/bin/golangci-lint run
+    - /bin/golangci-lint run
     - docker-make -x rule2,rule3 --summary --build-only metal-core
   only:
     - master
