enable sensible gopath variables

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,10 @@ image: registry.cloud.fits/fits/buildtools:1
 
 before_script:
   - curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b /bin v1.21.0
-  - gopath.sh
 
 merge-request-and-tags:
+  variables:
+    GOPATH: /go
   script: 
     - /bin/golangci-lint run
     - docker-make -x rule2,rule3 --summary --build-only metal-core-merge-request-and-tags
