--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,8 @@ before_script:
   - curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.21.0
 
 merge-request-and-tags:
-  script: 
+  script:
+    - go mod download
     - $(go env GOPATH)/bin/golangci-lint run
     - docker-make -x rule2,rule3 --summary --build-only metal-core-merge-request-and-tags
   only:
