--- a/.github/workflows/branches.yaml
+++ b/.github/workflows/branches.yaml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Lint
-        uses: actions-contrib/golangci-lint@master
-        with:
-          args: run ./...
+#      - name: Lint
+#        uses: actions-contrib/golangci-lint@master
+#        with:
+#          args: run ./...
       - name: Branch name
         run: echo running on branch ${GITHUB_REF##*/}
       - name: Build the Docker images
