--- a/internal/switcher/test_data/notenants/frr.conf
+++ b/internal/switcher/test_data/notenants/frr.conf
@@ -4,7 +4,7 @@ hostname leaf01
 username cumulus nopassword
 service integrated-vtysh-config
 !
-log syslog debugging
+log syslog warnings
 debug bgp updates
 debug bgp nht
 debug bgp update-groups
