--- a/internal/switcher/test_data/lab/frr.conf
+++ b/internal/switcher/test_data/lab/frr.conf
@@ -12,6 +12,7 @@ debug bgp zebra
 !
 vrf vrf104001
  vni 104001
+ exit-vrf
 !
 interface swp31
  ipv6 nd ra-interval 6
@@ -25,11 +26,11 @@ interface swp3
  ipv6 nd ra-interval 6
  no ipv6 nd suppress-ra
 !
-interface swp1
+interface swp1 vrf vrf104001
  ipv6 nd ra-interval 6
  no ipv6 nd suppress-ra
 !
-interface swp2
+interface swp2 vrf vrf104001
  ipv6 nd ra-interval 6
  no ipv6 nd suppress-ra
 !
