redistribute pxe vlan

--- a/internal/switcher/test_data/notenants/frr.conf
+++ b/internal/switcher/test_data/notenants/frr.conf
@@ -42,8 +42,11 @@ router bgp 4200000010
   neighbor FIREWALL allowas-in 1
  exit-address-family
 !
-route-map LOOPBACKS permit 10
+route-map LOCALS permit 10
  match interface lo
+!
+route-map LOCALS permit 12
+ match interface vlan4000
 !
 line vty
 !
