redistribute pxe vlan

--- a/internal/switcher/test_data/notenants/frr.conf
+++ b/internal/switcher/test_data/notenants/frr.conf
@@ -31,7 +31,7 @@ router bgp 4200000010
  neighbor FIREWALL timers 1 3
  !
  address-family ipv4 unicast
-  redistribute connected route-map LOOPBACKS
+  redistribute connected route-map LOCALS
   neighbor FIREWALL allowas-in 1
  exit-address-family
  !
