configurable interfaces and frr config template

--- a/internal/switcher/test_data/lab/frr.conf
+++ b/internal/switcher/test_data/lab/frr.conf
@@ -48,7 +48,7 @@ router bgp 4200000010
  neighbor swp3 interface peer-group FIREWALL
  !
  address-family ipv4 unicast
-  redistribute connected route-map LOCALS
+  redistribute connected route-map LOOPBACKS
   neighbor FIREWALL allowas-in 1
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
@@ -61,10 +61,10 @@ router bgp 4200000010
   neighbor swp3 route-map fw-swp3-vni out
  exit-address-family
 !
-route-map LOCALS permit 10
+route-map LOOPBACKS permit 10
  match interface lo
 !
-route-map LOCALS permit 12
+route-map LOOPBACKS permit 12
  match interface vlan4000
 !
 # route-maps for firewall@swp3
