--- a/internal/switcher/test_data/notenants/frr.conf
+++ b/internal/switcher/test_data/notenants/frr.conf
@@ -31,7 +31,7 @@ router bgp 4200000010
  neighbor FIREWALL timers 1 3
  !
  address-family ipv4 unicast
-  redistribute connected route-map LOCALS
+  redistribute connected route-map LOOPBACKS
   neighbor FIREWALL allowas-in 1
  exit-address-family
  !
@@ -42,10 +42,10 @@ router bgp 4200000010
   neighbor FIREWALL allowas-in 1
  exit-address-family
 !
-route-map LOCALS permit 10
+route-map LOOPBACKS permit 10
  match interface lo
 !
-route-map LOCALS permit 12
+route-map LOOPBACKS permit 12
  match interface vlan4000
 !
 line vty
