fixed test_data frrs

--- a/internal/switcher/test_data/notenants/frr.conf
+++ b/internal/switcher/test_data/notenants/frr.conf
@@ -45,8 +45,7 @@ router bgp 4200000010
 route-map LOOPBACKS permit 10
  match interface lo
 !
-route-map LOOPBACKS permit 12
- match interface vlan4000
+ip route 0.0.0.0/0 192.168.0.254 nexthop-vrf mgmt
 !
 line vty
 !
