--- a/internal/switcher/test_data/dev/frr.conf
+++ b/internal/switcher/test_data/dev/frr.conf
@@ -64,9 +64,6 @@ router bgp 4200000010
 route-map LOOPBACKS permit 10
  match interface lo
 !
-route-map LOOPBACKS permit 12
- match interface vlan4000
-!
 # route-maps for firewall@swp3
 ip prefix-list fw-swp3-in-prefixes seq 10 permit 10.0.2.1/32 le 32
 route-map fw-swp3-in permit 10
@@ -77,6 +74,8 @@ route-map fw-swp3-vni permit 11
  match evpn vni 104009
 route-map fw-swp3-vni permit 12
  match evpn vni 104010
+!
+ip route 0.0.0.0/0 192.168.101.1 nexthop-vrf mgmt
 !
 router bgp 4200000010 vrf vrf104001
  bgp router-id 10.0.0.10
