--- a/.github/workflows/latest.yaml
+++ b/.github/workflows/latest.yaml
@@ -16,3 +16,6 @@ jobs:
         docker login -u metalstackci -p ${{ secrets.DOCKER_HUB_TOKEN }}
         docker build -t metalstack/metal-core .
         docker push metalstack/metal-core
+    - uses: release-drafter/release-drafter@v5
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
